syntax = "proto3";

option java_package = "org.acme.orders.grpc";
option java_outer_classname = "OrderData";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
//import "google/protobuf/wrappers.proto"; //for stringValue
import "google/protobuf/timestamp.proto"; //for dates

message OrderRequest {
  string woNumber = 1;
  repeated WoJob woJobs = 2;
  string jobTypeCode = 3;
  string address = 4;
  string city = 5;
  string state = 6;
  google.protobuf.Timestamp woCreationDate = 7;
  google.protobuf.Timestamp woCompletionDate = 8;
  string clientId = 9;
  bool hasRules = 10;
}

message WoJob {
  string woNumber = 1;
  string jobCode = 2;
  int32 quantity = 3;
  string activeStatus = 4;
  string appliedRule = 5;
}

service OrderService {
  rpc woWithRules(OrderRequest) returns (google.protobuf.Empty) {}
}